--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,264 @@
+absl-py==1.3.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+alembic==1.8.1
+anyio==3.5.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==21.4.0
+autopage==0.5.1
+Babel==2.9.1
+backcall==0.2.0
+banana-dev==3.0.1
+bert-score==0.3.11
+black==22.1.0
+bleach==4.1.0
+#BLEURT @ file:///mnt/data1/prasann/latticegen/lattice-generation/bleurt
+blis==0.7.6
+CacheControl==0.12.11
+cachetools==5.2.0
+cachy==0.3.0
+catalogue==2.0.6
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+cleo==1.0.0a5
+click==8.0.3
+cliff==3.10.1
+cmaes==0.8.2
+cmd2==2.4.2
+colorama==0.4.4
+coloredlogs==15.0.1
+colorlog==6.6.0
+conllu==4.5.2
+crashtest==0.3.1
+cryptography==38.0.3
+cycler==0.11.0
+cymem==2.0.6
 datasets==1.16.1
-editdistance~=0.6.0
-filelock~=3.0.12
-matplotlib~=3.5.0
-networkx~=2.6.3
-nltk~=3.5
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.4
+distlib==0.3.6
+docker-pycreds==0.4.0
+dulwich==0.20.50
+editdistance==0.6.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl
+entrypoints==0.4
+executing==0.8.2
+filelock==3.8.0
+flatbuffers==2.0
+fonttools==4.29.1
+frozenlist==1.3.0
+fsspec==2022.1.0
+future==0.18.2
+gast==0.5.3
+gitdb==4.0.9
+GitPython==3.1.27
+google-auth==2.14.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+googleapis-common-protos==1.54.0
+greenlet==1.1.2
+grpcio==1.50.0
+h5py==3.6.0
+html5lib==1.1
+htmlmin==0.1.12
+huggingface-hub==0.4.0
+humanfriendly==10.0
+idna==3.3
+ImageHash==4.2.1
+importlib-metadata==4.13.0
+importlib-resources==5.4.0
+ipykernel==6.9.1
+ipython==8.0.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jaraco.classes==3.2.3
+jedi==0.18.1
+jeepney==0.8.0
+Jinja2==3.0.3
+joblib==1.0.1
+json5==0.9.6
+jsonargparse==3.13.1
+jsonpickle==2.1.0
+jsonschema==4.17.0
+jupyter-client==7.1.2
+jupyter-core==4.9.2
+jupyter-server==1.13.5
+jupyterlab==3.2.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.3
+jupyterlab-widgets==1.0.2
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+keyring==23.11.0
+kiwisolver==1.3.2
+langcodes==3.3.0
+libclang==13.0.0
+lockfile==0.12.2
+lxml==4.9.1
+Mako==1.2.1
+Markdown==3.4.1
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+#mbart-qe @ git+https://github.com/Unbabel/wmt21-qe-task.git@05e70da5f658b0eb83213ee3eed0496f326b34e8
+missingno==0.5.0
+mistune==0.8.4
+more-itertools==8.14.0
+mpmath==1.2.1
+msgpack==1.0.4
+multidict==6.0.2
+multimethod==1.7
+multiprocess==0.70.12.2
+murmurhash==1.0.6
+mypy-extensions==0.4.3
+nbclassic==0.3.5
+nbclient==0.5.11
+nbconvert==6.4.2
+nbformat==5.1.3
+nest-asyncio==1.5.4
+networkx==2.6.3
+nltk==3.7
+notebook==6.4.8
 numpy==1.21.4
-pandas~=1.3.4
-pyvis~=0.1.9
-rouge_score~=0.0.4
-sacrebleu~=2.0.0
-scipy~=1.4.1
-seaborn~=0.11.2
-spacy~=3.2.0
-textstat~=0.7.2
+oauthlib==3.2.0
+onnxruntime==1.12.0
+opt-einsum==3.3.0
+optuna==2.10.1
+packaging==21.3
+pandas==1.5.1
+pandas-profiling==3.1.0
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.9.0
+pathtools==0.1.2
+pathy==0.6.1
+pbr==5.9.0
+pexpect==4.8.0
+phik==0.12.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pkginfo==1.8.3
+pkgutil_resolve_name==1.3.10
+platformdirs==2.5.4
+plotly==5.9.0
+poetry==1.2.2
+poetry-core==1.3.2
+poetry-plugin-export==1.2.0
+portalocker==2.3.2
+preshed==3.0.6
+prettytable==3.3.0
+prometheus-client==0.13.1
+promise==2.3
+prompt-toolkit==3.0.28
+protobuf==3.19.4
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==7.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycorenlp==0.3.0
+pycparser==2.21
+pydantic==1.8.2
+pyDeprecate==0.3.2
+Pygments==2.11.2
+pylev==1.4.0
+pyparsing==3.0.7
+pyperclip==1.8.2
+pyphen==0.12.0
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytorch-lightning==1.6.4
+pytorch-nlp==0.5.0
+pytz==2021.3
+pyvis==0.1.9
+PyWavelets==1.2.0
+PyYAML==5.4.1
+pyzmq==22.3.0
+qaware-decode @ file:///mnt/data1/prasann/latticegen/lattice-generation/qaware-decode
+regex==2022.1.18
+requests==2.26.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rouge-score==0.0.4
+rsa==4.9
+#sacrebleu @ git+https://github.com/mjpost/sacrebleu@a73315b839dee92c9237c30f64380aa36dda4795
+sacremoses==0.0.47
+scikit-learn==1.1.1
+scipy==1.9.3
+seaborn==0.11.2
+SecretStorage==3.3.3
+Send2Trash==1.8.0
+sentencepiece==0.1.96
+sentry-sdk==1.9.0
+seqeval==1.2.2
+setproctitle==1.3.0
+shellingham==1.5.0
+shortuuid==1.0.9
+six==1.16.0
+sklearn==0.0
+smart-open==5.2.1
+smmap==5.0.0
+sniffio==1.2.0
+spacy==3.2.2
+spacy-legacy==3.0.8
+spacy-loggers==1.0.1
+SQLAlchemy==1.4.39
+srsly==2.4.2
+stack-data==0.2.0
+stevedore==4.0.0
+sympy==1.10.1
+tabulate==0.8.9
+tangled-up-in-unicode==0.1.0
+tenacity==8.0.1
+tensorboard==2.11.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorboardX==2.5.1
+tensorflow==2.8.0
+tensorflow-datasets==4.5.2
+tensorflow-io-gcs-filesystem==0.24.0
+tensorflow-metadata==1.6.0
+termcolor==1.1.0
+terminado==0.13.1
+testpath==0.5.0
+textstat==0.7.2
+tf-estimator-nightly==2.8.0.dev2021122109
+tf-slim==1.1.0
+thinc==8.0.13
+threadpoolctl==3.1.0
+tokenizers==0.10.3
+tomli==2.0.1
+tomlkit==0.11.6
 torch==1.10.0
-tqdm~=4.62.3
-transformers==4.13.0
+torch-tb-profiler==0.4.0
+torchmetrics==0.8.2
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.1
+transformers==4.10.3
+transquest==1.1.1
+typer==0.4.0
+typing_extensions==4.1.1
+unbabel-comet==1.1.3
+urllib3==1.26.7
+virtualenv==20.16.7
+visions==0.7.4
+wandb==0.13.0
+wasabi==0.9.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.3
+Werkzeug==2.0.3
+widgetsnbextension==3.5.2
+wrapt==1.13.3
+xxhash==2.0.2
+yarl==1.7.2
+zipp==3.7.0
